--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
   "name": "quickrenard",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "\"Quick Renard (QR) - A state management library for React, inspired by FraphQL principles, offering a flexible querying and mutation system.\"",
-  "main": "src/stateStore.ts",
+  
+  "main": "dist/stateStore.js",
+  "types": "dist/stateStore.d.ts",  
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development --open",
-    "compile": "tsc --build"
+    "compile": "tsc --build",
+    "compile:esm": "tsc --module ES6",
+    "compile:cjs": "tsc --module CommonJS"
   },
+
   "author": "cw",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cobluestars/QuickRenard.git"
   },
+  
   "license": "ISC",
   "dependencies": {
     "@types/react": "^18.2.33",
@@ -22,6 +29,7 @@
     "react-dom": "^18.2.0",
     "typescript": "^5.2.2"
   },
+  
   "devDependencies": {
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
@@ -34,6 +42,7 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
+  
   "keywords": [
     "state management",
     "react",
