--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quickrenard",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "\"Quick Renard (QR) - A state management library for React, inspired by GraphQL principles, offering a flexible querying and mutation system.\"",
   
   "main": "dist/QuickRenard.js",
@@ -44,6 +44,7 @@
   },
   
   "keywords": [
+    "front end",
     "state management",
     "react",
     "GraphQL",
