--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quickrenard",
-  "version": "1.2.0",
+  "version": "2.0.1",
   "description": "\"Quick Renard (QR) - A state management library for React, inspired by GraphQL principles, offering a flexible querying and mutation system.\"",
   "main": "dist/QuickRenard.js",
   "types": "dist/QuickRenard.d.ts",
@@ -39,9 +39,11 @@
     "webpack-dev-server": "^4.15.1"
   },
   "keywords": [
-    "front end",
+    "front-end",
     "state management",
+    "function management",
     "react",
+    "redux",
     "GraphQL",
     "hooks",
     "reactive",
