--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "quickrenard",
-  "version": "2.1.1",
-  "description": "\"Quick Renard (QR) - A state management library for React, inspired by GraphQL principles, offering a flexible querying and mutation system.\"",
+  "version": "2.1.3",
+  "description": "\"Quick Renard (QR) - A state (and function) management library for React, inspired by GraphQL principles, offering a flexible querying and mutation system.\"",
   "main": "dist/QuickRenard.js",
   "types": "dist/QuickRenard.d.ts",
   "scripts": {
@@ -41,6 +41,7 @@
   "keywords": [
     "front-end",
     "state management",
+    "function management",
     "react",
     "redux",
     "GraphQL",
