--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quickrenard",
-  "version": "2.1.3",
+  "version": "2.1.7",
   "description": "\"Quick Renard (QR) - A state (and function) management library for React, inspired by GraphQL principles, offering a flexible querying and mutation system.\"",
   "main": "dist/QuickRenard.js",
   "types": "dist/QuickRenard.d.ts",
@@ -31,7 +31,9 @@
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
     "babel-loader": "^9.1.3",
+    "babel-plugin-lodash": "^3.3.4",
     "html-webpack-plugin": "^5.5.3",
+    "lodash-webpack-plugin": "^0.11.6",
     "ts-loader": "^9.5.0",
     "ts-node": "^10.9.1",
     "webpack": "^5.89.0",
