--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quickrenard",
-  "version": "2.1.7",
+  "version": "2.2.1",
   "description": "\"Quick Renard (QR) - A state (and function) management library for React, inspired by GraphQL principles, offering a flexible querying and mutation system.\"",
   "main": "dist/QuickRenard.js",
   "types": "dist/QuickRenard.d.ts",
@@ -19,23 +19,27 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@types/react": "^18.2.33",
-    "@types/react-dom": "^18.2.14",
-    "lodash": "^4.17.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.2.2"
+    "lodash": "^4.17.21"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2 || ^18.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
+    "@babel/preset-typescript": "^7.23.2",
+    "@types/react": "^18.2.33",
+    "@types/react-dom": "^18.2.14",
     "babel-loader": "^9.1.3",
     "babel-plugin-lodash": "^3.3.4",
     "html-webpack-plugin": "^5.5.3",
     "lodash-webpack-plugin": "^0.11.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "ts-loader": "^9.5.0",
     "ts-node": "^10.9.1",
+    "typescript": "^5.2.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
