--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,8 @@
 {
-    "presets": ["@babel/preset-env", "@babel/preset-react", "@babel/preset-typescript"],
+    "presets": [
+      "@babel/preset-env", 
+      ["@babel/preset-react", {"runtime": "automatic"}], // React 17 이상에서 해당 설정 적용 필요
+      "@babel/preset-typescript"
+    ],
     "plugins": ["lodash"]
-}
-  
+}  
