--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "quickrenard",
-  "version": "2.6.2",
+  "version": "2.6.4",
   "description": "\"Quick Renard (QR) - A state (and function) management library for React, inspired by GraphQL principles, offering a flexible querying and mutation system.\"",
   "main": "dist/QuickRenard.js",
   "types": "dist/QuickRenard.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development --open",
     "compile": "tsc --build",
