--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quickrenard",
-  "version": "2.7.1",
+  "version": "2.7.2",
   "description": "\"Quick Renard (QR) - A state (and function) management library for React, inspired by GraphQL principles, offering a flexible querying and mutation system.\"",
   "main": "dist/QuickRenard.js",
   "types": "dist/QuickRenard.d.ts",
@@ -17,7 +17,7 @@
     "type": "git",
     "url": "git+https://github.com/cobluestars/QuickRenard.git"
   },
-  "license": "ISC",
+  "license": "MIT",
   "peerDependencies": {
     "react": "^17.0.2 || ^18.0.0"
   },
@@ -29,9 +29,7 @@
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "babel-loader": "^9.1.3",
-    "babel-plugin-lodash": "^3.3.4",
     "html-webpack-plugin": "^5.5.3",
-    "lodash-webpack-plugin": "^0.11.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ts-loader": "^9.5.0",
